# balloondle-lobby

./: Cargo.toml  Rocket.toml  start.bat
src/: database.rs  error.rs  main.rs  routes.rs
src/adapter/: mod.rs  postgresql_authenticator.rs  postgresql_matchmaker.rs
src/core/: mod.rs
src/core/auth/: authenticator.rs  error.rs  mod.rs  player.rs  session.rs  session_manager.rs  user.rs
src/core/matchmaking/: match_server_details.rs  matchmaker.rs  mod.rs  port_assigner.rs
src/core/random/: token_generator.rs
src/routes/: auth.rs  matchmaking.rs  mod.rs
src/test/: routes.rs
